# PDEFlow

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
configs/: pde.openrouter.json  research_problem.json  research_problem.openrouter.json
docs/: pdeflow_system.tex  references.bib
src/cli/: __init__.py
src/common/: __init__.py  evolution.py  failure_taxonomy.py  identity.py  openai_agents_sdk.py  plan_analysis.py  utils.py
src/config/: settings.py
src/integrations/: command_grounding.py
src/memory/: __init__.py  logging.py  store.py
src/orchestration/: blockers.py  failures.py  hitl.py  manager.py  normalization.py  routing.py  specs.py
src/pdeflow/: agents.py  app.py  config.py  memory.py  orchestration.py  runtime.py  schemas.py  tools.py
src/pdeflow/agents/: __init__.py  base.py  specialists.py
src/pdeflow/common/: __init__.py  utils.py
src/pdeflow/memory/: store.py
src/research_agents/: __init__.py  analysis.py  base.py  discovery.py  execution.py  reporting.py
src/runtime/: __init__.py  adapter.py  provider.py  structured_output.py
src/state/: __init__.py  core.py  entities.py  outputs.py
src/tools/: __init__.py  artifacts.py  base.py  capabilities.py  environment.py  execution.py  inspection.py  preflight.py  python_runtime.py  reporting.py  retrieval.py  service.py  workspace.py
tests/: test_artifact_validation.py  test_blocker_routing.py  test_command_grounding.py  test_evolution_memory.py  test_logging.py  test_manager_runtime.py
tmp_validation_run/logs/: debug.jsonl
tmp_validation_run/programs/: program_db.sqlite3
(+9 files in other folders)
